--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.5"
+    "notiflix": "^3.2.5",
+    "simplelightbox": "^2.10.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
